--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "validator": "^13.6.0"
   },
   "devDependencies": {
-    "env-cmd": "^10.1.0"
+    "env-cmd": "^10.1.0",
+    "prettier": "2.3.2"
   }
 }
