--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node src/index.js",
     "dev": "env-cmd -f ./config/dev.env nodemon src/index.js",
-    "debug": "env-cmd -f ./config/dev.env nodemon --inspect src/index.js"
+    "debug": "env-cmd -f ./config/dev.env nodemon --inspect src/index.js",
+    "refactor": "prettier --write \"**/*.js\""
   },
   "keywords": [],
   "author": "",
