--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node src/index.js",
     "dev": "env-cmd nodemon src/index.js",
     "debug": "env-cmd nodemon --inspect src/index.js",
+    "lint": "eslint \"{src,test}/**/*.js\" --fix",
     "format": "prettier --write \"**/*.js\""
   },
   "keywords": [],
@@ -26,6 +27,12 @@
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
     "nodemon": "^2.0.12",
     "prettier": "2.3.2"
   }
